m4: rename valgrind macro names and files (empathy → tpaw)
https://bugzilla.gnome.org/show_bug.cgi?id=699492

--- a/configure.ac
+++ b/configure.ac
@@ -122,7 +122,7 @@ if test -z "$XSLTPROC"; then
 fi
 AM_PATH_PYTHON([2.3])
 
-EMPATHY_ARG_VALGRIND
+TPAW_ARG_VALGRIND
 
 
 # -----------------------------------------------------------
