configure.ac: change the PKG_CHECK_MODULES prefix from EMPATHY to TPAW
https://bugzilla.gnome.org/show_bug.cgi?id=699492

--- a/configure.ac
+++ b/configure.ac
@@ -128,7 +128,7 @@ AC_SUBST(LDFLAGS)
 # Pkg-Config dependency checks
 # -----------------------------------------------------------
 
-PKG_CHECK_MODULES(EMPATHY,
+PKG_CHECK_MODULES(TPAW,
 [
    dbus-glib-1
    glib-2.0 >= $GLIB_REQUIRED
