Add a pkg-config file
https://bugzilla.gnome.org/show_bug.cgi?id=699492

--- a/configure.ac
+++ b/configure.ac
@@ -307,6 +307,7 @@ AC_SUBST([ENABLE_CODING_STYLE_CHECKS])
 
 AC_CONFIG_FILES([
    Makefile
+   telepathy-account-widgets-uninstalled.pc
    data/Makefile
    data/icons/Makefile
    po/Makefile.in
