tp-aw/Makefile.am: install irc-networks.xml in the right place
https://bugzilla.gnome.org/show_bug.cgi?id=699492

--- a/tp-account-widgets/Makefile.am
+++ b/tp-account-widgets/Makefile.am
@@ -118,7 +118,7 @@ account_widgets_dtd_files =		\
 	tpaw-irc-networks.dtd		\
 	$(NULL)
 
-ircnetworksdir = $(datadir)/empathy
+ircnetworksdir = $(datadir)/telepathy-account-widgets
 ircnetworks_DATA =		\
 	irc-networks.xml
 
