--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -145,12 +145,12 @@ update-icon-cache:
 	@-if test -z "$(DESTDIR)"; then \
 		echo "Updating Gtk icon cache."; \
 		for theme in $(private_icons_themes); do \
-			$(gtk_update_icon_cache) $(real_pkgdatadir)/icons/$$theme; \
+			$(gtk_update_icon_cache) $(icondir)/$$theme; \
 		done; \
 	else \
 		echo "*** Icon cache not updated.  After (un)install, run this:"; \
 		for theme in $(private_icons_themes); do \
-			echo "***   $(gtk_update_icon_cache) $(real_pkgdatadir)/icons/$$theme"; \
+			echo "***   $(gtk_update_icon_cache) $(icondir)/$$theme"; \
 		done; \
 	fi
 
@@ -160,8 +160,8 @@ install-icons:
 		CONTEXT=`echo $$icon | cut -d_ -f2`; \
 		SIZE=`echo $$icon | cut -d_ -f3`; \
 		ICONFILE=`echo $$icon | cut -d_ -f4`; \
-		mkdir -p $(DESTDIR)$(real_pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
-		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(real_pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
+		mkdir -p $(DESTDIR)$(icondir)/$$THEME/$$SIZE/$$CONTEXT; \
+		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(icondir)/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
 	done
 
 uninstall-icons:
@@ -170,7 +170,7 @@ uninstall-icons:
 		CONTEXT=`echo $$icon | cut -d_ -f2`; \
 		SIZE=`echo $$icon | cut -d_ -f3`; \
 		ICONFILE=`echo $$icon | cut -d_ -f4`; \
-		rm -f $(DESTDIR)$(real_pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
+		rm -f $(DESTDIR)$(icondir)/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
 	done
 
 install-data-local:
