--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,6 +1,8 @@
 SUBDIRS = icons
 
 gsettings_SCHEMAS = org.gnome.telepathy-account-widgets.gschema.xml
+
+if ENABLE_SETTINGS
 @GSETTINGS_RULES@
 
 # We need to compile schemas at make time
@@ -9,6 +11,7 @@ gschemas.compiled: $(gsettings_SCHEMAS:.xml=.valid)
 	$(AM_V_GEN) $(GLIB_COMPILE_SCHEMAS) --targetdir=. .
 
 all-local: gschemas.compiled
+endif
 
 EXTRA_DIST = 				\
 	$(schemas_DATA)			\
