data/Makefile.am: make --disable-settings actually work
Even if ENABLE_SETTINGS was not set, the files were still installed as
@GSETTINGS_RULES@ was still expanded.

https://bugzilla.gnome.org/show_bug.cgi?id=706801

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,8 +1,13 @@
 SUBDIRS = icons
 
-gsettings_SCHEMAS = org.gnome.telepathy-account-widgets.gschema.xml
+gsettings_SCHEMAS_real = org.gnome.telepathy-account-widgets.gschema.xml
 
 if ENABLE_SETTINGS
+gsettings_SCHEMAS = $(gsettings_SCHEMAS_real)
+else
+gsettings_SCHEMAS =
+endif
+
 @GSETTINGS_RULES@
 
 # We need to compile schemas at make time
@@ -10,12 +15,13 @@ if ENABLE_SETTINGS
 gschemas.compiled: $(gsettings_SCHEMAS:.xml=.valid)
 	$(AM_V_GEN) $(GLIB_COMPILE_SCHEMAS) --targetdir=. .
 
+if ENABLE_SETTINGS
 all-local: gschemas.compiled
 endif
 
 EXTRA_DIST = 				\
 	$(schemas_DATA)			\
-	$(gsettings_SCHEMAS)		\
+	$(gsettings_SCHEMAS_real)	\
 	$(NULL)
 
 DISTCLEANFILES = 		\
