Use AC_PROG_MKDIR_P and MKDIR_P instead of AM_PROG_MKDIR_P and mkdir_p
The latter are deprecated, and recent Automake makes a lot of noise
about them.

--- a/tools/lcov.am
+++ b/tools/lcov.am
@@ -7,7 +7,7 @@ lcov-report:
 	lcov --directory @top_srcdir@ --output-file @top_builddir@/lcov.info \
 		--remove @top_builddir@/lcov.info.tmp telepathy-glib-scan.c
 	rm @top_builddir@/lcov.info.tmp
-	$(mkdir_p) @top_builddir@/lcov.html
+	$(MKDIR_P) @top_builddir@/lcov.html
 	echo "Coming soon!" > @top_builddir@/lcov.html/index.html
 	git_commit=`GIT_DIR=@top_srcdir@/.git git log -1 --pretty=format:%h 2>/dev/null`;\
 	genhtml --title "@PACKAGE_STRING@ $$git_commit" \
