Add skypeweb to known protocols
Also add icons for Skype protocols. Source:
https://github.com/EionRobb/skype4pidgin/tree/master/icons

https://bugzilla.gnome.org/show_bug.cgi?id=778157

--- a/data/icons/Makefile.am
+++ b/data/icons/Makefile.am
@@ -24,6 +24,7 @@ private_icons = \
 	hicolor_apps_16x16_im-mxit.png \
 	hicolor_apps_16x16_im-myspace.png \
 	hicolor_apps_16x16_im-sametime.png \
+	hicolor_apps_16x16_im-skype.png \
 	hicolor_apps_16x16_im-yahoo.png \
 	hicolor_apps_16x16_im-zephyr.png \
 	hicolor_apps_22x22_im-aim.png \
@@ -45,6 +46,7 @@ private_icons = \
 	hicolor_apps_22x22_im-mxit.png \
 	hicolor_apps_22x22_im-myspace.png \
 	hicolor_apps_22x22_im-sametime.png \
+	hicolor_apps_22x22_im-skype.png \
 	hicolor_apps_22x22_im-yahoo.png \
 	hicolor_apps_22x22_im-zephyr.png \
 	hicolor_apps_24x24_im-aim.png \
@@ -106,6 +108,7 @@ private_icons = \
 	hicolor_apps_48x48_im-mxit.png \
 	hicolor_apps_48x48_im-myspace.png \
 	hicolor_apps_48x48_im-sametime.png \
+	hicolor_apps_48x48_im-skype.png \
 	hicolor_apps_48x48_im-yahoo.png \
 	hicolor_apps_48x48_im-zephyr.png \
 	hicolor_apps_scalable_im-aim.svg \
