build: Port to meson build system
meson is a build system focused on speed an ease of use, which
speeds up software development by the developer.

https://bugzilla.gnome.org/show_bug.cgi?id=786969

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,4 +9,8 @@ EXTRA_DIST = 			\
         CONTRIBUTORS \
         README \
         autogen.sh \
+        meson.build \
+        meson_options.txt \
+        meson_post_install.py \
+        po\meson.build \
         $(NULL)
